@startuml



  namespace de.gematik.ti.openhealthcard.common {
    abstract class de.gematik.ti.openhealthcard.common.AbstractAndroidCardReaderController {
        {static} - LOG : Logger
        {static} - MAX_SECONDS_WAIT_FOR_PERMISSION : long
        - context : Context
        - permissionWaitingLock : ReentrantLock
        + setContext()
        + waitForPermission()
        # checkContext()
        # getContext()
        - requestPermissionAndWait()
    }
  }
  

  namespace de.gematik.ti.openhealthcard.common {
    class de.gematik.ti.openhealthcard.common.WaitingPermissionReceiver {
        {static} - LOG : Logger
        - context : Context
        - permission : String
        - receivedResult : CompletableFuture<Boolean>
        + onReceive()
        # WaitingPermissionReceiver()
        ~ get()
        - registerPermissionReceiver()
        - unregisterPermissionReceiver()
    }
  }
  

  de.gematik.ti.openhealthcard.common.AbstractAndroidCardReaderController .up.|> de.gematik.ti.openhealthcard.common.interfaces.IAndroidCardReaderController
  de.gematik.ti.openhealthcard.common.AbstractAndroidCardReaderController -up-|> de.gematik.ti.cardreader.provider.api.AbstractCardReaderController
  de.gematik.ti.openhealthcard.common.WaitingPermissionReceiver -up-|> android.content.BroadcastReceiver









@enduml
